Deleted hobbies and projects sections, fixed intro section, hide navigation on tablet and mobile

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -9,39 +9,39 @@
 @include foundation-flex-grid;
 @include foundation-typography;
 @include foundation-button;
-@include foundation-forms;
+//@include foundation-forms;
 // @include foundation-range-input;
-@include foundation-accordion;
-@include foundation-accordion-menu;
-@include foundation-badge;
-@include foundation-breadcrumbs;
-@include foundation-button-group;
-@include foundation-callout;
-@include foundation-close-button;
-@include foundation-menu;
-@include foundation-menu-icon;
-@include foundation-drilldown-menu;
-@include foundation-dropdown;
-@include foundation-dropdown-menu;
-@include foundation-flex-video;
-@include foundation-label;
-@include foundation-media-object;
-@include foundation-off-canvas;
-@include foundation-orbit;
-@include foundation-pagination;
-@include foundation-progress-bar;
+//@include foundation-accordion;
+//@include foundation-accordion-menu;
+//@include foundation-badge;
+//@include foundation-breadcrumbs;
+//@include foundation-button-group;
+//@include foundation-callout;
+//@include foundation-close-button;
+//@include foundation-menu;
+//@include foundation-menu-icon;
+//@include foundation-drilldown-menu;
+//@include foundation-dropdown;
+//@include foundation-dropdown-menu;
+//@include foundation-flex-video;
+//@include foundation-label;
+//@include foundation-media-object;
+//@include foundation-off-canvas;
+//@include foundation-orbit;
+//@include foundation-pagination;
+//@include foundation-progress-bar;
 // @include foundation-progress-element;
 // @include foundation-meter-element;
-@include foundation-slider;
-@include foundation-sticky;
-@include foundation-reveal;
-@include foundation-switch;
-@include foundation-table;
-@include foundation-tabs;
-@include foundation-thumbnail;
-@include foundation-title-bar;
-@include foundation-tooltip;
-@include foundation-top-bar;
+//@include foundation-slider;
+//@include foundation-sticky;
+//@include foundation-reveal;
+//@include foundation-switch;
+//@include foundation-table;
+//@include foundation-tabs;
+//@include foundation-thumbnail;
+//@include foundation-title-bar;
+//@include foundation-tooltip;
+//@include foundation-top-bar;
 @include foundation-visibility-classes;
 @include foundation-float-classes;
 // @include foundation-flex-classes;
@@ -58,18 +58,18 @@ body {
     top: 50%;
     right: 15px;
     z-index: 100;
-}
-
-.nav.show-on-desktops {
-	display: block;
+		display: none;
+		&.show-on-desktops {
+			display: block;
+		}
 }
 
 .resume__section_text {
-	padding-top: 30%;
+	padding-top: 40%;
 	width: 100%;
 	z-index: 2;
 	&.intro {
-		@include breakpoint(medium down) {
+		@include breakpoint(medium only) {
 			padding-top: 20%;
 		}
 	}
@@ -79,7 +79,7 @@ body {
 	&.about-me {
 		padding-top: 5%;
 	}
-	&.hobbies, &.current-projects, &.contact {
+	&.contact {
 		@include breakpoint(medium down) {
 			padding-top: 10%;
 		}
@@ -179,28 +179,6 @@ ul {
 		}
 		&::before {
 				background-color: #002145;
-		}
-	}
-	&.hobbies {
-		&::before {
-				background-image:url('../../assets/imgs/Zelda.jpg');
-		}
-		@include breakpoint(medium down) {
-			height: rem-calc(480);
-		}
-		@include breakpoint(small down) {
-			height: rem-calc(480);
-		}
-	}
-	&.current-projects {
-		&::before {
-				background-color: #ff9933;
-		}
-		@include breakpoint(medium down) {
-			height: rem-calc(480);
-		}
-		@include breakpoint(small down) {
-			height: rem-calc(480);
 		}
 	}
 	&.contact {
